--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,3 +1,7 @@
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 html,
 body {
   padding: 0;
@@ -13,4 +17,32 @@ a {
 
 * {
   box-sizing: border-box;
+}
+
+.css-1ll6h33 {
+  box-sizing: border-box;
+  min-width: 0px;
+  display: flex;
+  position: sticky;
+  top: 0px;
+  height: 100vh;
+  width: 64px;
+  flex-direction: column;
+  -webkit-box-pack: justify;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  align-items: center;
+  background-color: transparent;
+  border-right: 2px solid rgb(240, 242, 247);
+  padding-top: 10px;
+  padding-bottom: 10px;
+  overflow-y: auto;
+}
+
+.css-vwqzm5 {
+    box-sizing: border-box;
+    min-width: 0px;
+    position: relative;
+    flex: 1 1 0%;
+    max-width: calc(100% - 64px);
 }
