--- a/styles/globals.css
+++ b/styles/globals.css
@@ -23,6 +23,11 @@ h1 {
   text-align: center;
 }
 
+h2 {
+  font-size: 26px;
+}
+
+
 .button {
   display: flex;
   background: rgba(180, 180, 180, 0.074);
